# ALCHEMY

./: ARCHITECTURE.md  CITATIONS.md  CONTRIBUTING.md  DIAGRAMS.md  FEATURES.md  LICENSE  QUICKSTART.md  README.md  SHOWCASE.md  main.py  main_agent_lightning.py  main_reasoning.py  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
data/sops/: custom_agent_workflow.json  refactor_code.json
examples/: agent_lightning_integration.py  create_custom_dataset.py  integrations_example.py  rag_example.py  smart_chunking_example.py  sop_example.py  unsloth_example.py
scripts/: check_installation.py  ingest_knowledge.py
src/: __init__.py
src/agent/: __init__.py  adaptive_trainer.py  agent_lightning_trainer.py  meta_agent.py  swarm_trainer.py  tools.py  training_agent.py  unsloth_trainer.py
src/data/: __init__.py  data_module.py
src/memory/: __init__.py  procedural_memory.py  smart_chunker.py  vector_store.py
src/models/: __init__.py  model_loader.py  unsloth_loader.py
src/reasoning/: __init__.py  luffy_trainer.py  search_r1.py
